--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <script src="pong.js"></script>
 </head>
 <body>
+
+    
     <canvas id="board"></canvas>
+
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+        </ul>
+
 </body>
+
+
+
+
 </html>
