--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    
+    <div id="wrapper">
     <canvas id="board"></canvas>
-
+</div>
         <ul class="circles">
                 <li></li>
                 <li></li>
